--- a/midi_android/app/src/main/res/layout/view_chords.xml
+++ b/midi_android/app/src/main/res/layout/view_chords.xml
@@ -50,7 +50,7 @@
         android:layout_marginBottom="8dp"
         android:background="#00000000"
         android:onClick="setChord"
-        android:text="Enter Chords"
+        android:text="Enter Chord"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
