--- a/midi_android/app/src/main/res/drawable/mybutton.xml
+++ b/midi_android/app/src/main/res/drawable/mybutton.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_pressed="true" >
+        <shape android:shape="rectangle"  >
+            <corners android:radius="10dip" />
+            <stroke android:width="0dip" android:color="#5e7974" />
+            <gradient android:angle="-90" android:startColor="#614DA8" android:endColor="#5D4E90"  />
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape android:shape="rectangle"  >
+            <corners android:radius="10dip" />
+            <stroke android:width="0dip" android:color="#614DA8" />
+            <solid android:color="#614DA8"/>
+        </shape>
+    </item>
+    <item >
+        <shape android:shape="rectangle"  >
+            <corners android:radius="10dip" />
+            <stroke android:width="0dip" android:color="#5e7974" />
+            <gradient android:angle="-90" android:startColor="#614DA8" android:endColor="#5D4E90" />
+        </shape>
+    </item>
 </selector>
